--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,11 @@
 .home-about-buttons {
-  margin-top: 7vh;
-  margin-bottom:  7vh;
+  margin: 7vh auto;
 
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  width: 80%;
 
   padding: 0 10px;
 
@@ -22,8 +23,9 @@
   border-radius: 25px;
   text-transform: uppercase;
   color: rgba(150,150,150,1);
+  font-size: 18px;
 
-  padding: 30px 0;
+  padding: 20px 0;
   width: 100%;
 
   margin-bottom: 10px;
@@ -35,11 +37,12 @@
   }
 }
 
-.come-in {
-  transform: translateY(150px);
-  animation: come-in 1.1s ease forwards;
-}
 
-@keyframes come-in {
-  to { transform: translateY(0); }
+@media screen and (max-width: 400px) {
+  .home-about-buttons {
+    margin: 4vh auto;
+  }
+  .conheca-mais-btn {
+    font-size: 14px;
+  }
 }
